	Added new xhtmlxtras plugin. Based on work contributed by Andrew Tetlaw.
	Added new text and hilite color picker layers to the advanced theme.
	Added new media plugin, this handles flash, quicktime, windows media player, real player.
	Added new valid_child_elements option. Enables you to remove non valid child nodes from parents.
	Added new required attribute flag to the valid_elements option.
	Added lightbox as rel value in the advanced link dialog.
	Added new RegExp support for editor_selector/editor_deselector options.
	Added new validation class. Implemented in various dialogs.
	Fixed bugs and issues with the lastest Safari Nightly build.
	Fixed bug where script element contents and event attributes where HTML encoded.
	Fixed bug where TinyMCE didn't load if a base element and relative URL to TinyMCE where used in MSIE.
	Fixed bug where TinyMCE didn't function in MSIE 5.0.1 because call method wasn't available.
	Fixed bug where context menu location wasn't correct if the user scrolled down on page.
	Fixed bug where nodes wasn't selected correctly in Opera 9.
	Fixed bug with setOuterHTML function. This had some impacts on the spellchecker plugin.
	Fixed bug where spaces in the body node of the document couldn't be deleted.
	Fixed bug where images lost focus in IE if they where placed in a resizable div.
	Fixed bug where isDirty state was set after calling user specific onsubmit function.
	Fixed bug where editor_selector/editor_deselector matched incorrectly on some names.
	Fixed bug where contextmenu was placed in the wrong location in FF.
	Fixed bug where images had a href attribute displayed in it's element path title.
	Fixed bug where forms_utils.js function where using a relative URL to the current theme.
	Fixed bug where cursor was placed at a incorrect location after mceInsertContent call in Gecko.
	Fixed issue with language variable in replace dialog in the searchreplace plugin.
	Fixed various CSS compatiblity issues with MSIE 7 beta 3.