@@ -1,0 +1,38 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Option: popups_css_add</title>
+<link href="css/screen.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+
+<div class="header">
+	<h1>Option: popups_css_add</h1>
+</div>
+
+<div class="content">
+	<p>
+		This option enables you to add a CSS to be used in all popup/dialog windows within TinyMCE this option is added after theme dialog CSS and enabled you to override the default CSS.
+	</p>
+
+	<div class="separator"></div>
+
+	<h3>Example of usage of the popups_css_add option:</h3>
+	<div class="example">
+<pre>
+tinyMCE.init({
+	...
+	<strong>popups_css_add : &quot;/mypopup.css&quot;</strong>
+});
+</pre>
+	</div>
+</div>
+
+<div class="footer">
+	<div class="helpindexlink"><a href="index.html">Index</a></div>
+	<div class="copyright">Copyright &copy; 2003-2006 <a href="http://www.moxiecode.com">Moxiecode Systems AB</a></div>
+	<br style="clear: both" />
+</div>
+
+</body>
+</html>
