@@ -62,6 +62,9 @@
 				<tr><td><strong>table_cell_limit</strong></td><td>Enables you to specify the max number of cells for a table.</td></tr>
 				<tr><td><strong>table_row_limit</strong></td><td>Enables you to specify the max number of rows for a table.</td></tr>
 				<tr><td><strong>table_col_limit</strong></td><td>Enables you to specify the max number of columns for a table.</td></tr>
+				<tr><td><strong>table_default_border</strong></td><td>Enables you to specify the default border value.</td></tr>
+				<tr><td><strong>table_default_cellpadding</strong></td><td>Enables you to specify the default cellpadding value.</td></tr>
+				<tr><td><strong>table_default_cellspacing</strong></td><td>Enables you to specify the default cellspacing value.</td></tr>
 			</tbody>
 		</table>
 		<br />
