@@ -115,6 +115,7 @@
 			<ul class="optionlist">
 				<li><a href="option_content_css.html">content_css</a></li>
 				<li><a href="option_popups_css.html">popups_css</a></li>
+				<li><a href="option_popups_css_add.html">popups_css_add</a></li>
 				<li><a href="option_editor_css.html">editor_css</a></li>
 				<li><a href="option_width.html">width</a></li>
 				<li><a href="option_height.html">height</a></li>
