@@ -47,7 +47,7 @@
 								<td><label id="borderlabel" for="border">{$lang_table_border}</label></td>
 								<td><input id="border" name="border" type="text" value="" size="3" maxlength="3" onchange="changedBorder();" class="number" /></td>
 							  </tr>
-							  <tr>
+							  <tr id="width_row">
 								<td><label id="widthlabel" for="width">{$lang_table_width}</label></td>
 								<td><input name="width" type="text" id="width" value="" size="4" maxlength="4" onchange="changedSize();" class="size" /></td>
 								<td><label id="heightlabel" for="height">{$lang_table_height}</label></td>
